<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="begin_date">Begin Date</string>
    <string name="enter_begin_date">Enter Begin Date</string>
    <string name="date_picker_title">New Begin Date:</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk_value">News Desk Value</string>
    <string name="arts">Arts</string>
    <string name="fashion_style">Fashion &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>

    <string-array name="sort_order_array">
        <item>Select Sort Order</item>
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
</resources>
