<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/detail_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.40" />

        <TextView
            android:id="@+id/begin_date_label"
            android:text="@string/begin_date"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/begin_date_text"/>

        <EditText
            android:id="@+id/begin_date_text"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:layout_constraintStart_toEndOf="@+id/detail_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/sort_order_label"
            android:text="@string/sort_order"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_guideline"
            app:layout_constraintTop_toBottomOf="@+id/begin_date_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/sort_order_spinner"/>

        <Spinner
            android:id="@+id/sort_order_spinner"
            android:layout_weight="2"
            android:entries="@array/sort_order_array"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:layout_constraintStart_toEndOf="@+id/detail_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/begin_date_text"/>

        <TextView
            android:id="@+id/news_desk_value_label"
            android:text="@string/news_desk_value"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_guideline"
            app:layout_constraintTop_toBottomOf="@+id/sort_order_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/arts_check_box"/>

        <CheckBox
            android:id="@+id/arts_check_box"
            android:text="@string/arts"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            app:layout_constraintStart_toEndOf="@+id/detail_guideline"
            app:layout_constraintTop_toBottomOf="@+id/sort_order_spinner"/>

        <CheckBox
            android:id="@+id/fashion_style_check_box"
            android:text="@string/fashion_style"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            app:layout_constraintStart_toEndOf="@+id/detail_guideline"
            app:layout_constraintTop_toBottomOf="@+id/arts_check_box"/>

        <CheckBox
            android:id="@+id/sports_check_box"
            android:text="@string/sports"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            app:layout_constraintStart_toEndOf="@+id/detail_guideline"
            app:layout_constraintTop_toBottomOf="@+id/fashion_style_check_box"/>

        <Button
            android:id="@+id/save_button"
            android:text="@string/save"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sports_check_box"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>